--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -7,41 +7,62 @@ on:
     branches: [ "main" ]
 
 jobs:
-
   build:
     runs-on: ubuntu-latest
     steps:
-    - uses: actions/checkout@v3
+      - uses: actions/checkout@v3
+      - name: Set up Go
+        uses: actions/setup-go@v3
+        with:
+          go-version: 1.18
+      - name: Build
+        run: make build
 
+  test:
+    runs-on: ubuntu-latest
+    steps:
+    - uses: actions/checkout@v3
     - name: Set up Go
       uses: actions/setup-go@v3
       with:
         go-version: 1.18
-
-    - name: Build
-      run: make build
-
     - name: Test
       run: make test-ci
-
     - name: Upload Test Results
       uses: actions/upload-artifact@v2
+      if: ${{ always() }}
       with:
         name: Test Results
         path: unit-test.xml
 
-    - name: Check Code Coverage
-      run: make coverage-check
+  analysis:
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v3
+      - name: Set up Go
+        uses: actions/setup-go@v3
+        with:
+          go-version: 1.18
+      - name: Make Analysis check
+        run: make analysis
+      - name: golangci-lint
+        uses: golangci/golangci-lint-action@v3
+        with:
+          args: -E gosec -E bodyclose -E cyclop -E exhaustive -E godox
 
-    - name: Upload Coverage Report
-      uses: actions/upload-artifact@v2
-      with:
-        name: Coverage Report
-        path: coverage.html
-
-    - name: Static Code Analysis
-      uses: reviewdog/action-golangci-lint@v2
-      with:
-        github_token: ${{ secrets.GITHUB_TOKEN }}
-        reporter: github-pr-check
-        golangci_lint_flags:  -E gosec -E bodyclose -E cyclop -E exhaustive -E godox
+  coverage:
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v3
+      - name: Set up Go
+        uses: actions/setup-go@v3
+        with:
+          go-version: 1.18
+      - name: Check Code Coverage
+        run: make coverage-check
+      - name: Upload Coverage Report
+        uses: actions/upload-artifact@v2
+        if: ${{ always() }}
+        with:
+          name: Coverage Report
+          path: coverage.html
