ci: Skip caching in golangci-lint
Action fails on cache upload otherwise.
Possible fix per https://github.com/golangci/golangci-lint-action/issues/135

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -54,6 +54,7 @@ jobs:
         uses: golangci/golangci-lint-action@v3
         with:
           args: -E gosec -E bodyclose -E cyclop -E exhaustive -E godox
+          skip-pkg-cache: true
 
   coverage:
     runs-on: ubuntu-latest
